# delorean

./: .gitignore  README.md  README.org  Spec.org  USAGE.txt  delorean.cabal  stack.yaml
app/: Main.hs
src/: Evaluate.hs  Expression.hs  Interpreter.hs  Interpreter_base.lhs  Lint.hs  Prompt.hs  Statement.hs  TypedExpression.hs  Util.hs
testPrograms/: prints.dl.hs  test.dl.hs  testStatic.dl  testWhile.dl.hs
