name:                delorean
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/delorean#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org
                   , USAGE.txt
library
    hs-source-dirs: src
    exposed-modules: Statement, Expression, Prompt, Evaluate, Interpreter, Util, Lint
    build-depends: base >= 4.7 && < 5
                 , containers
                 , mtl
                 , parsec
    default-language: Haskell2010

executable delorean-exe
    hs-source-dirs:      app
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , delorean
                       , MissingH
                       , docopt
